Added oxy99 price to config; Added LethalLib as dependency

--- a/Oxygen.csproj
+++ b/Oxygen.csproj
@@ -66,8 +66,8 @@
     <Reference Include="BepInEx.AssemblyPublicizer.MSBuild, Version=0.4.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\BepInEx.AssemblyPublicizer.MSBuild.0.4.1\lib\net472\BepInEx.AssemblyPublicizer.MSBuild.dll</HintPath>
     </Reference>
-    <Reference Include="CSync">
-      <HintPath>..\References\CSync.dll</HintPath>
+    <Reference Include="com.sigurd.csync">
+      <HintPath>..\References\com.sigurd.csync.dll</HintPath>
     </Reference>
     <Reference Include="Facepunch Transport for Netcode for GameObjects, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
