--- a/Oxygen.csproj
+++ b/Oxygen.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <AssemblyName>Oxygen</AssemblyName>
-        <Description>Adds oxygen level as a new mechanic</Description>
-        <Version>1.5.0</Version>
+        <Description>Don't forget to refill oxygen canisters!</Description>
+        <Version>1.5.6</Version>
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
