--- a/Oxygen.csproj
+++ b/Oxygen.csproj
@@ -8,6 +8,14 @@
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <DebugType>embedded</DebugType>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+      <DebugType>embedded</DebugType>
+    </PropertyGroup>
+
     <ItemGroup>
       <None Remove="Assets\oxygenaudio" />
       <None Remove="Assets\oxygenprefabs" />
@@ -39,9 +47,16 @@
 	<ItemGroup>
 	  <Reference Include="ImmersiveVisor">
 		<Publicize>true</Publicize>
-	    <HintPath>..\References\ImmersiveVisor.dll</HintPath>
+	    <HintPath>..\Assets\References\ImmersiveVisor.dll</HintPath>
+	  </Reference>
+	  <Reference Include="LCVR">
+	    <HintPath>..\Assets\References\LCVR.dll</HintPath>
 	  </Reference>
 	</ItemGroup>
+
+	<Target Name="NetcodePatch" AfterTargets="PostBuildEvent">
+		<Exec Command="netcode-patch -nv 1.5.2 &quot;$(TargetPath)&quot; @(ReferencePathWithRefAssemblies->'&quot;%(Identity)&quot;', ' ')" />
+	</Target>
 
 
 </Project>
