Added ability to die early if you can't get out from under the water for a long time

--- a/Oxygen.csproj
+++ b/Oxygen.csproj
@@ -52,6 +52,12 @@
 	  <Reference Include="LCVR">
 	    <HintPath>..\Assets\References\LCVR.dll</HintPath>
 	  </Reference>
+	  <Reference Include="LethalCompanyInputUtils">
+	    <HintPath>..\Assets\References\LethalCompanyInputUtils.dll</HintPath>
+	  </Reference>
+	  <Reference Include="LethalConfig">
+	    <HintPath>..\Assets\References\LethalConfig.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 
 	<Target Name="NetcodePatch" AfterTargets="PostBuildEvent">
